Step 8: binding paths

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,3 +3,5 @@ firstName=First Name
 lastName=Last Name
 # Screen titles
 panelHeaderText=Data Binding Basics with i18n
+panel2HeaderText=Address Detail
+address=Address
