--- a/webapp/i18n/i18n_vi.properties
+++ b/webapp/i18n/i18n_vi.properties
@@ -3,3 +3,5 @@ firstName=Tên
 lastName=Họ
 # Screen titles
 panelHeaderText=Label bằng Tiếng Việt
+panel2HeaderText=Địa chỉ chi tiết
+address=Địa chỉ
