Step 9: Formatting Values

--- a/webapp/i18n/i18n_vi.properties
+++ b/webapp/i18n/i18n_vi.properties
@@ -5,3 +5,9 @@ lastName=Họ
 panelHeaderText=Label bằng Tiếng Việt
 panel2HeaderText=Địa chỉ chi tiết
 address=Địa chỉ
+
+
+# E-mail
+sendEmail=Gửi mail
+mailSubject=Xin chào {0}!
+mailBody=Khỏe k?
