--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,3 +5,8 @@ lastName=Last Name
 panelHeaderText=Data Binding Basics with i18n
 panel2HeaderText=Address Detail
 address=Address
+
+# E-mail
+sendEmail=Send Mail
+mailSubject=Hi {0}!
+mailBody=How are you?
