Step 10: Formatting using data types

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,6 +5,7 @@ lastName=Last Name
 panelHeaderText=Data Binding Basics with i18n
 panel2HeaderText=Address Detail
 address=Address
+salesAmount=Sales Amount
 
 # E-mail
 sendEmail=Send Mail
