--- a/webapp/i18n/i18n_vi.properties
+++ b/webapp/i18n/i18n_vi.properties
@@ -5,6 +5,7 @@ lastName=Họ
 panelHeaderText=Label bằng Tiếng Việt
 panel2HeaderText=Địa chỉ chi tiết
 address=Địa chỉ
+salesAmount=Số lượng
 
 
 # E-mail
