Step 12: Aggregation Biding Using templates

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,6 +4,7 @@ lastName=Last Name
 # Screen titles
 panelHeaderText=Data Binding Basics with i18n
 panel2HeaderText=Address Detail
+panel3HeaderText=Aggregation Binding
 address=Address
 salesAmount=Sales Amount
 
@@ -11,3 +12,7 @@ salesAmount=Sales Amount
 sendEmail=Send Mail
 mailSubject=Hi {0}!
 mailBody=How are you?
+
+# Product list
+productListTitle=Product List
+stockValue=Current Stock Value
