--- a/webapp/i18n/i18n_vi.properties
+++ b/webapp/i18n/i18n_vi.properties
@@ -4,6 +4,7 @@ lastName=Họ
 # Screen titles
 panelHeaderText=Label bằng Tiếng Việt
 panel2HeaderText=Địa chỉ chi tiết
+panel3HeaderText=Aggregation Binding
 address=Địa chỉ
 salesAmount=Số lượng
 
@@ -12,3 +13,7 @@ salesAmount=Số lượng
 sendEmail=Gửi mail
 mailSubject=Xin chào {0}!
 mailBody=Khỏe k?
+
+# Product list
+productListTitle=Danh sách sản phẩm
+stockValue=Giá trị kho
