Step 13: Element Binding

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,6 +5,8 @@ lastName=Last Name
 panelHeaderText=Data Binding Basics with i18n
 panel2HeaderText=Address Detail
 panel3HeaderText=Aggregation Binding
+panel4HeaderText=Product Details
+
 address=Address
 salesAmount=Sales Amount
 
@@ -16,3 +18,11 @@ mailBody=How are you?
 # Product list
 productListTitle=Product List
 stockValue=Current Stock Value
+
+# Product Details
+ProductID=Product ID
+ProductName=Product Name
+QuantityPerUnit=Quantity per Unit
+UnitPrice=Unit Price
+UnitsInStock=Number of Units in Stock
+Discontinued=Discontinued
