--- a/webapp/i18n/i18n_vi.properties
+++ b/webapp/i18n/i18n_vi.properties
@@ -5,9 +5,10 @@ lastName=Họ
 panelHeaderText=Label bằng Tiếng Việt
 panel2HeaderText=Địa chỉ chi tiết
 panel3HeaderText=Aggregation Binding
+panel4HeaderText=Chi tiết sản phẩm
+
 address=Địa chỉ
 salesAmount=Số lượng
-
 
 # E-mail
 sendEmail=Gửi mail
@@ -17,3 +18,11 @@ mailBody=Khỏe k?
 # Product list
 productListTitle=Danh sách sản phẩm
 stockValue=Giá trị kho
+
+# Product Details
+ProductID=ID Sản phẩm
+ProductName=Tên sản phẩm
+QuantityPerUnit=Số lượng
+UnitPrice=Đơn giá
+UnitsInStock=Số đơn vị trong kho
+Discontinued=Discontinued
